[package]
name = "tutorial3-pipeline-challenge"

description = """
Create a second pipeline that uses the triangle's
position data to create a color that it then sends
to the fragment shader to use."""

version = "0.2.0"
authors = [
    "Ben Hansen <bhbenjaminhansen@gmail.com>",
    "Zageron <hello@adambryant.ca>",
]
edition = "2018"

[[bin]]
name = "tutorial3-pipeline-challenge"
path = "src/main.rs"

[dependencies]
winit = "0.23"
wgpu = "0.6"
futures = "0.3.8"
