[package]
name = "tutorial4-buffer-challenge"

description = """
Create a more complex shape than the one we made
(aka. more than three triangles)
using a vertex buffer and an index buffer.
Toggle between the two with the space key."""

version = "0.2.0"
authors = [
    "Ben Hansen <bhbenjaminhansen@gmail.com>",
    "Zageron <hello@adambryant.ca>",
]
edition = "2018"

[[bin]]
name = "tutorial4-buffer-challenge"
path = "src/main.rs"

[dependencies]
winit = "0.23"
wgpu = "0.6"
futures = "0.3.8"
bytemuck = "1.4.1"
