[package]
name = "tutorial4-buffer"
version = "0.2.0"
authors = [
    "Ben Hansen <bhbenjaminhansen@gmail.com>",
    "Zageron <hello@adambryant.ca>",
]
edition = "2018"

[[bin]]
name = "tutorial4-buffer"
path = "src/main.rs"

[dependencies]
winit = "0.23"
wgpu = "0.6"
futures = "0.3.8"
bytemuck = "1.4.1"
