[package]
name = "tutorial5-textures"
version = "0.2.0"
authors = [
    "Ben Hansen <bhbenjaminhansen@gmail.com>",
    "Zageron <hello@adambryant.ca>",
]
edition = "2018"

[[bin]]
name = "tutorial5-textures"
path = "src/main.rs"

[dependencies]
anyhow = "1"
winit = "0.24"
wgpu = "0.7"
futures = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = "0.23"
